[amazonechocontrol] Import SmartHomeJ fork
Both forks have diverged a reasonable amount. Basically, I started with the
SmartHomeJ fork since it is the more stable version, and has had more changes.
I first resolved the thing-types.xml, in particular the thingTypeVersions,
and merged the update instructions.xml - in such a way that coming from either
the openHAB fork or the SmartHomeJ fork should result in the same structure.
Then I made sure it compiled, resolving missing classes that were previously
in smarthomej.common - using BaseDynamicCommandDescriptionProvider, and
essentially re-implemented SimpleDynamicStateDescriptionProvider and
ResourceUtil. Then I went through the history since the fork in openHAB,
and applied individual significant commits (mostly manually, since they
were almost all small, and easier to apply manually than resolve merge
conflicts). "prepare for next version", "apply spotless", I18n updates,
etc. commits were ignored (`mvn i18n:generate-default-translations` was
run to make sure it was up to date, and non EN translations were fully
reverted to their prior state in the openHAB fork to ensure future
CrowdIn updates will work correctly). Several commits were omitted entirely,
since they were either implemented orthogonally in SmartHomeJ (thermostat
and humidity handlers) or no longer releveant (SmartHomeJ completely
removed AccountServlet in an HTTP/2 refactor).

Note: the only breaking change coming from the SmartHomeJ fork is that
  the humidity channel id changed to relativeHumidity (handled by an
  update instruction)

Co-authored-by: Jan N. Klug <github@klug.nrw>
Co-authored-by: Tom Blum <trinitus01@googlemail.com>
Signed-off-by: Cody Cutrer <cody@cutrer.us>