@@ -17,11 +17,9 @@ import static org.openhab.binding.amazonechocontrol.internal.smarthome.Constants
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -29,18 +27,19 @@ import java.util.function.Function;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.openhab.binding.amazonechocontrol.internal.Connection;
-import org.openhab.binding.amazonechocontrol.internal.jsons.JsonSmartHomeCapabilities.SmartHomeCapability;
-import org.openhab.binding.amazonechocontrol.internal.jsons.JsonSmartHomeDevices.SmartHomeDevice;
-import org.openhab.binding.amazonechocontrol.internal.jsons.JsonSmartHomeGroupIdentifiers;
-import org.openhab.binding.amazonechocontrol.internal.jsons.JsonSmartHomeGroupIdentity;
-import org.openhab.binding.amazonechocontrol.internal.jsons.JsonSmartHomeGroups.SmartHomeGroup;
-import org.openhab.binding.amazonechocontrol.internal.jsons.JsonSmartHomeTags;
-import org.openhab.binding.amazonechocontrol.internal.jsons.SmartHomeBaseDevice;
+import org.openhab.binding.amazonechocontrol.internal.AmazonEchoControlCommandDescriptionProvider;
+import org.openhab.binding.amazonechocontrol.internal.AmazonEchoControlStateDescriptionProvider;
+import org.openhab.binding.amazonechocontrol.internal.connection.Connection;
+import org.openhab.binding.amazonechocontrol.internal.dto.smarthome.JsonSmartHomeCapability;
+import org.openhab.binding.amazonechocontrol.internal.dto.smarthome.JsonSmartHomeDevice;
+import org.openhab.binding.amazonechocontrol.internal.dto.smarthome.JsonSmartHomeGroupIdentifiers;
+import org.openhab.binding.amazonechocontrol.internal.dto.smarthome.JsonSmartHomeGroupIdentity;
+import org.openhab.binding.amazonechocontrol.internal.dto.smarthome.JsonSmartHomeGroups.SmartHomeGroup;
+import org.openhab.binding.amazonechocontrol.internal.dto.smarthome.JsonSmartHomeTags;
+import org.openhab.binding.amazonechocontrol.internal.dto.smarthome.SmartHomeBaseDevice;
+import org.openhab.binding.amazonechocontrol.internal.smarthome.ChannelInfo;
 import org.openhab.binding.amazonechocontrol.internal.smarthome.Constants;
-import org.openhab.binding.amazonechocontrol.internal.smarthome.HandlerBase;
-import org.openhab.binding.amazonechocontrol.internal.smarthome.HandlerBase.ChannelInfo;
-import org.openhab.binding.amazonechocontrol.internal.smarthome.HandlerBase.UpdateChannelResult;
+import org.openhab.binding.amazonechocontrol.internal.smarthome.InterfaceHandler;
 import org.openhab.core.thing.Bridge;
 import org.openhab.core.thing.Channel;
 import org.openhab.core.thing.ChannelUID;
@@ -49,10 +48,11 @@ import org.openhab.core.thing.ThingStatus;
 import org.openhab.core.thing.ThingStatusDetail;
 import org.openhab.core.thing.binding.BaseThingHandler;
 import org.openhab.core.thing.binding.BridgeHandler;
+import org.openhab.core.thing.binding.ThingHandlerCallback;
 import org.openhab.core.thing.binding.builder.ChannelBuilder;
 import org.openhab.core.thing.binding.builder.ThingBuilder;
-import org.openhab.core.thing.type.ChannelTypeUID;
 import org.openhab.core.types.Command;
+import org.openhab.core.types.CommandOption;
 import org.openhab.core.types.RefreshType;
 import org.openhab.core.types.State;
 import org.openhab.core.types.StateDescription;
@@ -62,7 +62,6 @@ import org.slf4j.LoggerFactory;
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
-import com.google.gson.JsonNull;
 import com.google.gson.JsonObject;
 
 /**
@@ -71,88 +70,112 @@ import com.google.gson.JsonObject;
 @NonNullByDefault
 public class SmartHomeDeviceHandler extends BaseThingHandler {
     private final Logger logger = LoggerFactory.getLogger(SmartHomeDeviceHandler.class);
+    private final AmazonEchoControlCommandDescriptionProvider dynamicCommandDescriptionProvider;
+    private final AmazonEchoControlStateDescriptionProvider dynamicStateDescriptionProvider;
 
-    private @Nullable SmartHomeBaseDevice smartHomeBaseDevice;
     private final Gson gson;
-    private final Map<String, HandlerBase> handlers = new HashMap<>();
+    private final Map<String, InterfaceHandler> interfaceHandlers = new HashMap<>();
     private final Map<String, JsonArray> lastStates = new HashMap<>();
 
-    public SmartHomeDeviceHandler(Thing thing, Gson gson) {
+    private @Nullable SmartHomeBaseDevice smartHomeBaseDevice;
+    private String deviceId = "";
+
+    public SmartHomeDeviceHandler(Thing thing, Gson gson,
+            AmazonEchoControlCommandDescriptionProvider dynamicCommandDescriptionProvider,
+            AmazonEchoControlStateDescriptionProvider dynamicStateDescriptionProvider) {
         super(thing);
         this.gson = gson;
+        this.dynamicCommandDescriptionProvider = dynamicCommandDescriptionProvider;
+        this.dynamicStateDescriptionProvider = dynamicStateDescriptionProvider;
     }
 
     public synchronized void setDeviceAndUpdateThingState(AccountHandler accountHandler,
             @Nullable SmartHomeBaseDevice smartHomeBaseDevice) {
         if (smartHomeBaseDevice == null) {
-            updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.NONE, "Can't find smarthomeBaseDevice");
+            updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.NONE, "Can't find smartHomeBaseDevice");
             return;
         }
+
         boolean changed = this.smartHomeBaseDevice == null;
         this.smartHomeBaseDevice = smartHomeBaseDevice;
 
         Set<String> unusedChannels = new HashSet<>();
         thing.getChannels().forEach(channel -> unusedChannels.add(channel.getUID().getId()));
 
-        Set<String> unusedHandlers = new HashSet<>(handlers.keySet());
+        Set<String> unusedHandlers = new HashSet<>(interfaceHandlers.keySet());
 
-        Map<String, List<SmartHomeCapability>> capabilities = new HashMap<>();
-        getCapabilities(capabilities, accountHandler, smartHomeBaseDevice);
+        Map<String, List<JsonSmartHomeCapability>> capabilities = getCapabilities(accountHandler, smartHomeBaseDevice);
 
         ThingBuilder thingBuilder = editThing();
 
-        for (String interfaceName : capabilities.keySet()) {
-            HandlerBase handler = handlers.get(interfaceName);
+        for (Map.Entry<String, List<JsonSmartHomeCapability>> capability : capabilities.entrySet()) {
+            String interfaceName = capability.getKey();
+            InterfaceHandler handler = interfaceHandlers.get(interfaceName);
             if (handler != null) {
                 unusedHandlers.remove(interfaceName);
             } else {
-                Function<SmartHomeDeviceHandler, HandlerBase> creator = Constants.HANDLER_FACTORY.get(interfaceName);
+                Function<SmartHomeDeviceHandler, InterfaceHandler> creator = Constants.HANDLER_FACTORY
+                        .get(interfaceName);
                 if (creator != null) {
                     handler = creator.apply(this);
-                    handlers.put(interfaceName, handler);
+                    interfaceHandlers.put(interfaceName, handler);
                 }
             }
             if (handler != null) {
-                Collection<ChannelInfo> required = handler
-                        .initialize(capabilities.getOrDefault(interfaceName, List.of()));
+                Collection<ChannelInfo> required = handler.initialize(capability.getValue());
+                ThingHandlerCallback callback = getCallback();
+                if (callback == null) {
+                    logger.warn("Trying to modify {} but no callback present.", thing.getUID());
+                    return;
+                }
                 for (ChannelInfo channelInfo : required) {
                     unusedChannels.remove(channelInfo.channelId);
-                    if (addChannelToDevice(thingBuilder, channelInfo.channelId, channelInfo.itemType,
-                            channelInfo.channelTypeUID)) {
+                    ChannelUID channelUID = new ChannelUID(thing.getUID(), channelInfo.channelId);
+                    Channel channel = thing.getChannel(channelUID);
+                    if (channel == null || !channelInfo.channelTypeUID.equals(channel.getChannelTypeUID())) {
+                        channel = addChannelToDevice(thingBuilder, callback, channelInfo);
                         changed = true;
+                    }
+
+                    List<CommandOption> commandOptions = handler.getCommandDescription(channel);
+                    if (commandOptions != null) {
+                        dynamicCommandDescriptionProvider.setCommandOptions(channelUID, commandOptions);
+                    }
+
+                    StateDescription stateDescription = handler.getStateDescription(channel);
+                    if (stateDescription != null) {
+                        dynamicStateDescriptionProvider.setDescription(channelUID, stateDescription);
                     }
                 }
             }
         }
 
-        unusedHandlers.forEach(handlers::remove);
+        unusedHandlers.forEach(interfaceHandlers::remove);
         if (!unusedChannels.isEmpty()) {
             changed = true;
-            unusedChannels.stream().map(id -> new ChannelUID(thing.getUID(), id)).forEach(thingBuilder::withoutChannel);
+            unusedChannels.forEach(channelId -> thingBuilder.withoutChannel(new ChannelUID(thing.getUID(), channelId)));
         }
 
         if (changed) {
             updateThing(thingBuilder.build());
             updateStatus(ThingStatus.UNKNOWN, ThingStatusDetail.NONE, "Thing has changed.");
-            accountHandler.forceDelayedSmartHomeStateUpdate(getId());
+            accountHandler.forceDelayedSmartHomeStateUpdate(deviceId);
         }
-    }
-
-    public String getId() {
-        String id = (String) getConfig().get(DEVICE_PROPERTY_ID);
-        if (id == null) {
-            return "";
-        }
-        return id;
     }
 
     @Override
     public void updateState(String channelId, State state) {
-        super.updateState(new ChannelUID(thing.getUID(), channelId), state);
+        super.updateState(channelId, state);
     }
 
     @Override
     public void initialize() {
+        deviceId = Objects.requireNonNullElse((String) getConfig().get(DEVICE_PROPERTY_ID), "");
+        if (deviceId.isEmpty()) {
+            updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR, "id not set");
+            return;
+        }
+
         AccountHandler accountHandler = getAccountHandler();
         if (accountHandler != null) {
             accountHandler.addSmartHomeDeviceHandler(this);
@@ -162,95 +185,116 @@ public class SmartHomeDeviceHandler extends BaseThingHandler {
         }
     }
 
-    private boolean addChannelToDevice(ThingBuilder thingBuilder, String channelId, String itemType,
-            ChannelTypeUID channelTypeUID) {
-        Channel channel = thing.getChannel(channelId);
-        if (channel != null) {
-            if (channelTypeUID.equals(channel.getChannelTypeUID()) && itemType.equals(channel.getAcceptedItemType())) {
-                // channel exist with the same settings
-                return false;
-            }
-            // channel exist with other settings, remove it first
-            thingBuilder.withoutChannel(channel.getUID());
+    @Override
+    public void dispose() {
+        dynamicCommandDescriptionProvider.removeCommandDescriptionForThing(thing.getUID());
+        dynamicStateDescriptionProvider.removeDescriptionsForThing(thing.getUID());
+    }
+
+    public String getId() {
+        return deviceId;
+    }
+
+    private Channel addChannelToDevice(ThingBuilder thingBuilder, ThingHandlerCallback callback,
+            ChannelInfo channelInfo) {
+        ChannelUID channelUID = new ChannelUID(thing.getUID(), channelInfo.channelId);
+        thingBuilder.withoutChannel(channelUID);
+
+        ChannelBuilder channelBuilder = callback.createChannelBuilder(
+                new ChannelUID(thing.getUID(), channelInfo.channelId), channelInfo.channelTypeUID);
+        String label = channelInfo.label;
+        if (label != null) {
+            channelBuilder.withLabel(label);
         }
-        thingBuilder.withChannel(ChannelBuilder.create(new ChannelUID(thing.getUID(), channelId), itemType)
-                .withType(channelTypeUID).build());
-        return true;
+        Channel channel = channelBuilder.build();
+        thingBuilder.withChannel(channel);
+
+        return channel;
     }
 
     public void updateChannelStates(List<SmartHomeBaseDevice> allDevices,
             Map<String, JsonArray> applianceIdToCapabilityStates) {
-        logger.trace("Updating {} with {}", allDevices, applianceIdToCapabilityStates);
+        logger.trace("Updating allDevices={} with states={}", allDevices, applianceIdToCapabilityStates);
         AccountHandler accountHandler = getAccountHandler();
         SmartHomeBaseDevice smartHomeBaseDevice = this.smartHomeBaseDevice;
         if (smartHomeBaseDevice == null) {
-            updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.NONE, "Can't find smarthomeBaseDevice");
+            updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.NONE, "Can't find smartHomeBaseDevice");
             return;
         }
 
-        boolean stateFound = false;
         Map<String, List<JsonObject>> mapInterfaceToStates = new HashMap<>();
-        SmartHomeDevice firstDevice = null;
-        for (SmartHomeDevice smartHomeDevice : getSupportedSmartHomeDevices(smartHomeBaseDevice, allDevices)) {
+        Set<JsonSmartHomeDevice> smartHomeDevices = getSupportedSmartHomeDevices(smartHomeBaseDevice, allDevices);
+        logger.trace("Search for smartHomeBaseDevice='{}' resulted in '{}'", smartHomeBaseDevice, smartHomeDevices);
+        if (smartHomeDevices.isEmpty()) {
+            logger.debug("Did not find a supported smartHomeDevice.");
+            return;
+        }
+
+        for (JsonSmartHomeDevice smartHomeDevice : smartHomeDevices) {
             String applianceId = smartHomeDevice.applianceId;
+            logger.trace("applianceId={}, group={}, keys={}", applianceId, smartHomeDevice.isGroup(),
+                    applianceIdToCapabilityStates.keySet());
             if (applianceId == null) {
+                logger.debug("applianceId is null in smartHomeDevice={}", smartHomeDevice);
                 continue;
             }
-            JsonArray states = applianceIdToCapabilityStates.get(applianceId);
-            if (states != null) {
-                stateFound = true;
-                if (smartHomeBaseDevice.isGroup()) {
-                    // for groups, store the last state of all devices
-                    lastStates.put(applianceId, states);
-                }
-            } else {
-                states = lastStates.get(applianceId);
-                if (states == null) {
-                    continue;
-                }
+            JsonArray states = applianceIdToCapabilityStates.getOrDefault(applianceId,
+                    lastStates.getOrDefault(applianceId, new JsonArray()));
+            if (states.isEmpty()) {
+                logger.trace("No states array found for applianceId={}.", applianceId);
+                continue;
             }
-            if (firstDevice == null) {
-                firstDevice = smartHomeDevice;
+            if (smartHomeBaseDevice.isGroup()) {
+                // for groups, store the last state of all devices
+                lastStates.put(applianceId, states);
             }
+            logger.trace("Found states array={} for applianceId={}", states, applianceId);
+
             for (JsonElement stateElement : states) {
                 String stateJson = stateElement.getAsString();
                 if (stateJson.startsWith("{") && stateJson.endsWith("}")) {
                     JsonObject state = Objects.requireNonNull(gson.fromJson(stateJson, JsonObject.class));
-                    String interfaceName = Objects.requireNonNullElse(state.get("namespace"), JsonNull.INSTANCE)
-                            .getAsString();
-                    Objects.requireNonNull(mapInterfaceToStates.computeIfAbsent(interfaceName, k -> new ArrayList<>()))
-                            .add(state);
+                    JsonElement interfaceName = state.get("namespace");
+                    if (interfaceName != null) {
+                        Objects.requireNonNull(mapInterfaceToStates.computeIfAbsent(interfaceName.getAsString(),
+                                k -> new ArrayList<>())).add(state);
+                    }
                 }
             }
         }
 
-        for (HandlerBase handlerBase : handlers.values()) {
-            UpdateChannelResult result = new UpdateChannelResult();
-            for (String interfaceName : handlerBase.getSupportedInterface()) {
+        if (mapInterfaceToStates.isEmpty()) {
+            logger.trace("Found no matching states.");
+            return;
+        }
+        logger.trace("mapInterfaceToState='{}'", mapInterfaceToStates);
+
+        for (InterfaceHandler interfaceHandler : interfaceHandlers.values()) {
+            InterfaceHandler.UpdateChannelResult result = new InterfaceHandler.UpdateChannelResult();
+            for (String interfaceName : interfaceHandler.getSupportedInterface()) {
                 List<JsonObject> stateList = mapInterfaceToStates.get(interfaceName);
                 if (stateList != null) {
                     try {
-                        handlerBase.updateChannels(interfaceName, stateList, result);
-                    } catch (Exception e) {
+                        interfaceHandler.updateChannels(interfaceName, stateList, result);
+                    } catch (RuntimeException e) {
                         // We catch all exceptions, otherwise all other things are not updated!
                         logger.debug("Updating states failed", e);
                         updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR,
-                                e.getLocalizedMessage());
+                                "RuntimeException while processing updates");
                     }
                 }
             }
 
-            if (result.needSingleUpdate && smartHomeBaseDevice instanceof SmartHomeDevice smartHomeDevice
+            if (result.needSingleUpdate && smartHomeBaseDevice instanceof JsonSmartHomeDevice smartHomeDevice
                     && accountHandler != null) {
-                accountHandler.forceDelayedSmartHomeStateUpdate(smartHomeDevice.findId());
+                String applianceId = smartHomeDevice.applianceId;
+                if (applianceId != null) {
+                    accountHandler.forceDelayedSmartHomeStateUpdate(applianceId);
+                }
             }
         }
 
-        if (stateFound) {
-            updateStatus(ThingStatus.ONLINE);
-        } else {
-            updateStatus(ThingStatus.UNKNOWN, ThingStatusDetail.NONE, "State not found");
-        }
+        updateStatus(ThingStatus.ONLINE);
     }
 
     private @Nullable AccountHandler getAccountHandler() {
@@ -272,38 +316,37 @@ public class SmartHomeDeviceHandler extends BaseThingHandler {
             logger.debug("accountHandler is null in {}", thing.getUID());
             return;
         }
-        Connection connection = accountHandler.findConnection();
-        if (connection == null) {
+        Connection connection = accountHandler.getConnection();
+        if (!connection.isLoggedIn()) {
             logger.debug("connection is null in {}", thing.getUID());
             return;
         }
 
         try {
             if (command instanceof RefreshType) {
-                accountHandler.forceDelayedSmartHomeStateUpdate(getId());
+                accountHandler.forceDelayedSmartHomeStateUpdate(deviceId);
                 return;
             }
             SmartHomeBaseDevice smartHomeBaseDevice = this.smartHomeBaseDevice;
             if (smartHomeBaseDevice == null) {
-                logger.debug("smarthomeBaseDevice is null in {}", thing.getUID());
+                logger.debug("smartHomeBaseDevice is null in {}", thing.getUID());
                 return;
             }
-            Set<SmartHomeDevice> devices = getSupportedSmartHomeDevices(smartHomeBaseDevice,
+            Set<JsonSmartHomeDevice> devices = getSupportedSmartHomeDevices(smartHomeBaseDevice,
                     accountHandler.getLastKnownSmartHomeDevices());
             String channelId = channelUID.getId();
 
-            for (String interfaceName : handlers.keySet()) {
-                HandlerBase handlerBase = handlers.get(interfaceName);
-                if (handlerBase == null || !handlerBase.hasChannel(channelId)) {
+            for (InterfaceHandler interfaceHandler : interfaceHandlers.values()) {
+                if (!interfaceHandler.hasChannel(channelId)) {
                     continue;
                 }
-                for (SmartHomeDevice smartHomeDevice : devices) {
+                for (JsonSmartHomeDevice smartHomeDevice : devices) {
                     String entityId = smartHomeDevice.entityId;
                     if (entityId == null) {
                         continue;
                     }
                     accountHandler.forceDelayedSmartHomeStateUpdate(getId()); // block updates
-                    if (handlerBase.handleCommand(connection, smartHomeDevice, entityId,
+                    if (interfaceHandler.handleCommand(connection, smartHomeDevice, entityId,
                             smartHomeDevice.getCapabilities(), channelUID.getId(), command)) {
                         accountHandler.forceDelayedSmartHomeStateUpdate(getId()); // force update again to restart
                         // update timer
@@ -316,32 +359,36 @@ public class SmartHomeDeviceHandler extends BaseThingHandler {
         }
     }
 
-    private static void getCapabilities(Map<String, List<SmartHomeCapability>> result, AccountHandler accountHandler,
+    private Map<String, List<JsonSmartHomeCapability>> getCapabilities(AccountHandler accountHandler,
             SmartHomeBaseDevice device) {
-        if (device instanceof SmartHomeDevice smartHomeDevice) {
-            for (SmartHomeCapability capability : smartHomeDevice.getCapabilities()) {
+        Map<String, List<JsonSmartHomeCapability>> capabilities = new HashMap<>();
+        if (device instanceof JsonSmartHomeDevice smartHomeDevice) {
+            for (JsonSmartHomeCapability capability : smartHomeDevice.getCapabilities()) {
                 String interfaceName = capability.interfaceName;
                 if (interfaceName != null) {
-                    Objects.requireNonNull(result.computeIfAbsent(interfaceName, name -> new ArrayList<>()))
+                    Objects.requireNonNull(capabilities.computeIfAbsent(interfaceName, name -> new ArrayList<>()))
                             .add(capability);
                 }
             }
-        }
-        if (device instanceof SmartHomeGroup) {
-            for (SmartHomeDevice smartHomeDevice : getSupportedSmartHomeDevices(device,
+        } else if (device instanceof SmartHomeGroup) {
+            for (JsonSmartHomeDevice smartHomeDevice : getSupportedSmartHomeDevices(device,
                     accountHandler.getLastKnownSmartHomeDevices())) {
-                getCapabilities(result, accountHandler, smartHomeDevice);
+                getCapabilities(accountHandler, smartHomeDevice).forEach((interfaceName, caps) -> Objects
+                        .requireNonNull(capabilities.computeIfAbsent(interfaceName, name -> new ArrayList<>()))
+                        .addAll(caps));
             }
         }
+
+        return capabilities;
     }
 
-    public static Set<SmartHomeDevice> getSupportedSmartHomeDevices(@Nullable SmartHomeBaseDevice baseDevice,
+    public static Set<JsonSmartHomeDevice> getSupportedSmartHomeDevices(@Nullable SmartHomeBaseDevice baseDevice,
             List<SmartHomeBaseDevice> allDevices) {
         if (baseDevice == null) {
-            return Collections.emptySet();
+            return Set.of();
         }
-        Set<SmartHomeDevice> result = new HashSet<>();
-        if (baseDevice instanceof SmartHomeDevice smartHomeDevice) {
+        Set<JsonSmartHomeDevice> result = new HashSet<>();
+        if (baseDevice instanceof JsonSmartHomeDevice smartHomeDevice) {
             if (smartHomeDevice.getCapabilities().stream().map(capability -> capability.interfaceName)
                     .anyMatch(SUPPORTED_INTERFACES::contains)) {
                 result.add(smartHomeDevice);
@@ -349,7 +396,7 @@ public class SmartHomeDeviceHandler extends BaseThingHandler {
         } else {
             SmartHomeGroup smartHomeGroup = (SmartHomeGroup) baseDevice;
             for (SmartHomeBaseDevice device : allDevices) {
-                if (device instanceof SmartHomeDevice smartHomeDevice) {
+                if (device instanceof JsonSmartHomeDevice smartHomeDevice) {
                     JsonSmartHomeTags.JsonSmartHomeTag tags = smartHomeDevice.tags;
                     if (tags != null) {
                         JsonSmartHomeGroupIdentity.SmartHomeGroupIdentity tagNameToValueSetMap = tags.tagNameToValueSetMap;
@@ -371,16 +418,5 @@ public class SmartHomeDeviceHandler extends BaseThingHandler {
             }
         }
         return result;
-    }
-
-    public @Nullable StateDescription findStateDescription(Channel channel, StateDescription originalStateDescription,
-            @Nullable Locale locale) {
-        String channelId = channel.getUID().getId();
-        for (HandlerBase handler : handlers.values()) {
-            if (handler.hasChannel(channelId)) {
-                return handler.findStateDescription(channelId, originalStateDescription, locale);
-            }
-        }
-        return null;
     }
 }
